--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
     </div>
     </div>
   </div>
-  <script src="" />
+  <script src="https://cdn.jsdelivr.net/gh/JulioAco/login-contact/script.js"></script>
 </body>
 </html>
